recursion.lessons.recursion.polygonfractal.PolygonFractal.scala.error
PolygonFractal:4: error: not found: value level
	if (level!=1) {
            ^PolygonFractal:5: error: not found: value sierpinski
		sierpinski(level-1, length/2)
                ^PolygonFractal:7: error: not found: value sierpinski
		sierpinski(level-1, length/2)
                ^PolygonFractal:11: error: not found: value sierpinski
		sierpinski(level-1, length/2)
                ^