recursion.lessons.recursion.polygonfractal.PolygonFractal.scala.code
def polygonFractal (levels:Int, sides:Int, length:Double, shrink:Double) {

	if (level!=1) {
		sierpinski(level-1, length/2)
		avance(length/2)
		sierpinski(level-1, length/2)
		droite(60)
		avance(length/2)
		droite(60)
		sierpinski(level-1, length/2)
		droite(60)
		avance(length/2)
		droite(60)
		avance(length/2)
		droite(120)
	} else {
		for (i<-1 to 5) {
			avance(length)
			droite(120)
		}
	}

}
